--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<html lang="es">
 <html>
     <head>
-        <title>
-            Login
-        </title>
+        <title>Login</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.css">
     </head>
     <body>
         <div class="container">
@@ -41,5 +44,7 @@
                 </div>
             </div>
         </div>
+
+
     </body>
 </html>
